--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae suscipit in laborum deleniti alias eum dolores sapiente provident nostrum vero? Officiis maxime numquam animi praesentium ipsa quo itaque cum nulla!
+
+        </p>
+    </div>
 </body>
 </html>
