--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
 
         </p>
     </div>
+    <div>
+        <h2>my car</h2>
+        <img src="image/13660.jpg" alt="">
+    </div>
 </body>
 </html>
